--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,18 @@ main {
   text-align: center;
 }
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
+}
+
 footer {
   text-align: center;
   background-color: #e0e0e0;
